examples/test/testpolicy9573.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9573
  namespace: namespace87
spec:
  podSelector:
    matchLabels:
      key6: value28
      key15: value21
      key20: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value1
      podSelector:
        matchLabels:
          key16: value34
          key13: value9
